== Version 2.6.9 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # The 'populate' scripts could failed on menu configuration in some cases.
    # There was issue when a FileRef is creating when a CremeModel is deleted:
      the path could be too long to be stored by the FileRef, which caused an error.


== Version 2.6.8 ==

  Users side :
  ------------
    # The render of history lines on TextFields (like "description") with line breaks has been improved.
    # Apps :
        * Opportunities :
            - Unsetting the current Quote was not possible if you did not create the relationship yourself.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The creation forms for HeaderFilter & EntityFilter now accept models with digits at the end of their name.
        # Fix conversion issues in creme.widgets.CheckListSelect when json datatype is enabled.
        # Apps :
            * Billing :
                - The Relation cache is now used in 'Line.related_document'.
                - In 'models.Base._DELETABLE_INTERNAL_RTYPE_IDS', the RelationType ID 'REL_OBJ_LINE_RELATED_ITEM' has been removed.
                - The handler 'signals.manage_line_deletion()' now avoid to re-compte the totals when its the whole entity (e.g. Invoice) which is being deleted.
                  It's faster & it avoids some inconsistent states where the entity has no emitter/receiver in its 'save() too.


== Version 2.6.7 ==

  Users side :
  ------------
    # A content visibility issue on popover opening has been fixed.
    # Apps :
        * Creme_config :
            - When you emptied your bricks configuration for "My page" (default or owned)
              with the form, the configuration displayed a ugly "BLOCK" line.
        * Persons :
            - A crash in the view to create a user from a Contact has been fixed.